      winx_add_volume_region, winx_sub_volume_region,
      winx_release_free_volume_regions, winx_dbg_print_header,
      winx_toupper, winx_tolower functions added to zenwinx library
    - udefrag_get_volume_information function added to udefrag library
    - WgxDbgPrint, WgxDbgPrintLastError, WgxDisplayLastError,
      WgxSafeSubclassWindow, WgxSafeCallWndProc, WgxCenterWindow, WgxSetText,
      WgxCreateFont, WgxDestroyFont, WgxSaveFont calls added to wgx library
    - WgxSetFont prototype changed
    - obsolete WgxGetLogFontStructureFromFile, WgxSaveLogFontStructureToFile
      calls removed from wgx.dll library

                                    ***

  Version 4.4.0  2010-09-24
  ------------------------------------------------------------------------------
    RC2:
    - history of typed commands added to the boot time interactive mode;
      navigation is possible by arrow keys, 'history' command can be used
      to list all typed commands
    - call, man and type commands added to the boot time shell
    - echo, exit, pause and set commands of the boot time shell improved
    - clearing of the failed boot flag added for reboot and shutdown at boot time
    - pending boot-off boot time script command support added,
      this removes the limitation of boot-on/off not working before reboot/shutdown
    - interactive mode at boot time now displays help split into pages
    - escape key handling added to break the boot time script execution
    - boot time commands parsing was rewritten to increase 
      reliability and flexibility of the boot time shell
    - corrected cluttered progress display if console output was redirected
    - optimized timeout for waiting for a keyboard event in boot time interface
    - the following translations were updated:

      Portuguese, Chinese (Traditional)

    - FAT formatted volumes are displayed in GUI now as FAT12/FAT16/FAT32
      instead of less informative FAT/FAT32