@@ -4,7 +4,8 @@ name        = "wgx"
 target_type = "dll"
 
 src = {
-	"accel.c", "dbg.c", "font.c", "i18n.c", "misc.c", "shell.c", "web-analytics.c", "wgx.c" 
+	"accel.c", "config.c", "dbg.c", "font.c", "i18n.c",
+	"misc.c", "shell.c", "web-analytics.c", "wgx.c" 
 }
 
 rc = { "wgx.rc" }
