@@ -34,7 +34,8 @@ HISTORY
     - udefrag_get_volume_information function added to udefrag library
     - WgxDbgPrint, WgxDbgPrintLastError, WgxDisplayLastError,
       WgxSafeSubclassWindow, WgxSafeCallWndProc, WgxCenterWindow, WgxSetText,
-      WgxCreateFont, WgxDestroyFont, WgxSaveFont calls added to wgx library
+      WgxCreateFont, WgxDestroyFont, WgxSaveFont, WgxGetOptions, WgxSaveOptions
+      calls added to wgx library
     - WgxSetFont prototype changed
     - obsolete WgxGetLogFontStructureFromFile, WgxSaveLogFontStructureToFile
       calls removed from wgx.dll library
